<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/imagen_de_libro"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background" />

        <!-- Botón de Like en la esquina inferior derecha, subido un poco -->
        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bot_n_de_favorito"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_favorite_border" />


        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_update"
            android:contentDescription="@string/update_book"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">


            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bookDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
